[package]
name = "hex_caster"
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1"
splines = { version = "5.0.0", default-features = false, features = ["num-traits"] }
embassy-usb-logger = "0.5.1"
log = "0.4.29"
embassy-usb = { version = "0.5.1", features = ["log"] }
embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embedded-alloc = "0.7.0"
